api/tests/snapshots/wire_contract__active_miners_history_wire.snap
---
source: api/tests/wire_contract.rs
expression: resp
---
{
  "from": "2026-01-02T00:00:00Z",
  "to": "2026-01-02T02:00:00Z",
  "bucket": "1h",
  "points": [
    {
      "bucket_start": "2026-01-02T00:00:00Z",
      "miners": 12
    },
    {
      "bucket_start": "2026-01-02T01:00:00Z",
      "miners": 17
    }
  ]
}
