api/tests/snapshots/wire_contract__full_rebate_unknown.snap
---
source: api/tests/wire_contract.rs
expression: "FullRebateResponse\n{ address: ADDR.to_owned(), tier: None, full_rebate: false, }"
---
{
  "address": "kaspa:qz4j8mu269z8llgcczmfukm9fan2fq822kzxu4cfukd5fqrhxpsv2zhs9jxnp",
  "tier": null,
  "full_rebate": false
}
