api/tests/snapshots/wire_contract__miner_profile_wire.snap
---
source: api/tests/wire_contract.rs
expression: resp
---
{
  "address": "kaspa:qz4j8mu269z8llgcczmfukm9fan2fq822kzxu4cfukd5fqrhxpsv2zhs9jxnp",
  "network": "mainnet",
  "first_seen_at": "2025-12-01T00:00:00Z",
  "last_seen_at": "2026-01-02T03:04:05Z",
  "window_secs": 600,
  "accepted_shares": 1000,
  "rejected_shares": 4,
  "hashrate_hs": 7500000000.0,
  "workers_count": 2,
  "kas": {
    "allocated": {
      "sompi": "900000000",
      "kas": "9"
    },
    "paid": {
      "sompi": "200000000",
      "kas": "2"
    },
    "payable": {
      "sompi": "700000000",
      "kas": "7"
    }
  },
  "nacho_rebate": {
    "accrued": {
      "sompi": "0",
      "kas": "0"
    },
    "paid": {
      "sompi": "0",
      "kas": "0"
    },
    "pending": {
      "sompi": "0",
      "kas": "0"
    }
  }
}
