api/tests/snapshots/wire_contract__pool_active_sessions_wire.snap
---
source: api/tests/wire_contract.rs
expression: resp
---
{
  "active_sessions": 5,
  "active_workers": 3
}
